Fixed bug: When top menu is closed, edit button still has 100% width and covers HTML elements at the top of the page.
git-svn-id: https://svn.typo3.org/TYPO3v4/CoreProjects/feedit/trunk@2260 743128fe-103e-dd11-99c4-001b210b3e58

--- a/feeditadvanced/res/css/fe_edit_closed.css
+++ b/feeditadvanced/res/css/fe_edit_closed.css
@@ -1,8 +1,7 @@
 div#feEditAdvanced-menuBar {
 	position: fixed;
-	left: 0;
 	top: 0;
-	width: 100%;
+	right: 0;
 	color: #fff;
 	padding: 0;
 	margin: 0;
